Added new class

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
           за шкірою обличчя та тіла.
         </p>
         <p>
-          B <span class="">beauty zone</span> ми гарантуємо найвищі стандарти
-          якості та приємний сервіс. Наші косметологічні процедури та препарати
-          допоможуть вам підтримувати свою красу та молодість. З нами краса
-          назавжди!
+          B <span class="accent">beauty zone</span> ми гарантуємо найвищі
+          стандарти якості та приємний сервіс. Наші косметологічні процедури та
+          препарати допоможуть вам підтримувати свою красу та молодість. З нами
+          краса назавжди!
         </p>
       </section>
       <section id="Why-choose-us-section">
