--- a/index.html
+++ b/index.html
@@ -64,47 +64,63 @@
         </p>
       </section>
       <section id="About-us-section">
-        <h2>
-          Перевтілюйтесь в <span class="headings-color">beauty zone!</span>
+        <h2 class="about-us title">
+          Перевтілюйтесь в <span class="headings">beauty zone!</span>
         </h2>
-        <p>
+        <p class="about-us-text">
           Наша косметологічна клініка пропонує вам професійні послуги з догляду
           за шкірою обличчя та тіла.
         </p>
-        <p>
-          B <span class="accent">beauty zone</span> ми гарантуємо найвищі
+        <p class="about-us-text">
+          B <span class="about-us-bold">beauty zone</span> ми гарантуємо найвищі
           стандарти якості та приємний сервіс. Наші косметологічні процедури та
           препарати допоможуть вам підтримувати свою красу та молодість. З нами
           краса назавжди!
         </p>
       </section>
       <section id="Why-choose-us-section">
-        <h2>Чому люди <span class="headings-color">обирають нас</span></h2>
+        <h2 class="title">
+          Чому люди <span class="headings">обирають нас</span>
+        </h2>
         <ul>
           <li>
-            Всі наші косметологи мають вищу медичну освіту та стаж роботи від 5
-            років
+            <article>
+              <h5 class="why-choose-us-advantages">
+                Всі наші косметологи мають вищу медичну освіту та стаж роботи
+                від 5 років
+              </h5>
+            </article>
           </li>
           <li>
-            Використовуємо тільки професійне обладнання та косметику, перевірену
-            часом
+            <article>
+              <h5 class="why-choose-us-advantages">
+                Використовуємо тільки професійне обладнання та косметику,
+                перевірену часом
+              </h5>
+            </article>
           </li>
           <li>
-            Наша мета - підкреслити переваги та приховати недоліки, а не
-            переробити
+            <article>
+              <h5 class="why-choose-us-advantages">
+                Наша мета - підкреслити переваги та приховати недоліки, а не
+                переробити
+              </h5>
+            </article>
           </li>
         </ul>
       </section>
       <section id="Our-procedures-section">
-        <h2>Наші <span class="headings-color">процедури</span></h2>
+        <h2 class="title">Наші <span class="headings">процедури</span></h2>
         <ul>
-          <li>Маски для обличчя</li>
-          <li>Ін'єкції для обличчя</li>
-          <li>Очищення обличчя</li>
+          <li><article>Маски для обличчя</article></li>
+          <li><article>Ін'єкції для обличчя</article></li>
+          <li><article>Очищення обличчя</article></li>
         </ul>
       </section>
       <section id="Contact-us-section">
-        <h3>Як нас <span class="headings-color">знайти</span></h3>
+        <h3 class="contact-us title">
+          Як нас <span class="headings">знайти</span>
+        </h3>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9325734650024!2d30.51560574119678!3d50.442356571708864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2sTarasa%20Shevchenko%20Blvd%2C%205%2C%20Kyiv%2C%20Ukraine%2C%2002000!5e0!3m2!1sen!2scz!4v1700424819917!5m2!1sen!2scz"
           width="600"
