Add images, classes for footer, refactoring

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Comaptible" content="IE=edfe" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beauty Zone</title>
     <link rel="stylesheet" href="./css/styles.css" />
@@ -11,7 +10,7 @@
     <header>
       <nav>
         <a href="/">
-          <img src="./images/logo.svg" alt="Logo Header" />
+          <img src="./images/logo.webp" alt="Logo Header" />
         </a>
         <ul>
           <li><a class="header-link" href="#About-us-section">Про нас</a></li>
@@ -32,21 +31,21 @@
             <li>
               <a href="tel:+380960000007"
                 ><img
-                  src="./images/telephone-receiver_icon-icons.com_56033 1-header.svg"
+                  src="./images/telephone-receiver_icon-icons.com_560331-header.webp"
                   alt="Telephone logo"
               /></a>
             </li>
             <li>
               <a href="#"
                 ><img
-                  src="./images/uit_facebook-f-header.svg"
+                  src="./images/uit_facebook-f-header.webp"
                   alt="Facebook link logo"
               /></a>
             </li>
             <li>
               <a href="#"
                 ><img
-                  src="./images/ph_instagram-logo-light-header.svg"
+                  src="./images/ph_instagram-logo-light-header.webp"
                   alt="Instagram link logo"
               /></a>
             </li>
@@ -112,9 +111,19 @@
       <section id="Our-procedures-section">
         <h2 class="title">Наші <span class="headings">процедури</span></h2>
         <ul>
-          <li><article>Маски для обличчя</article></li>
-          <li><article>Ін'єкції для обличчя</article></li>
-          <li><article>Очищення обличчя</article></li>
+          <li>
+            <article>
+              <h3 class="procedures-list">Маски для обличчя</h3>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 class="procedures-list">Ін'єкції для обличчя</h3>
+            </article>
+          </li>
+          <li>
+            <article><h3 class="procedures-list">Очищення обличчя</h3></article>
+          </li>
         </ul>
       </section>
       <section id="Contact-us-section">
@@ -136,51 +145,58 @@
     <footer>
       <nav>
         <a href="/">
-          <img src="./images/logo.svg" alt="Logo Footer" />
+          <img src="./images/logo.webp" alt="Logo Footer" />
         </a>
         <ul>
-          <li>Про нас</li>
-          <li>Чому ми</li>
-          <li>Наші процедури</li>
-          <li>Контакти</li>
+          <li class="address-list-footer">Про нас</li>
+          <li class="address-list-footer">Чому ми</li>
+          <li class="address-list-footer">Наші процедури</li>
+          <li class="address-list-footer">Контакти</li>
         </ul>
       </nav>
       <address class="social-footer">
         <ul>
           <li>
-            <a href="tel:+380960000007">+38(096)0000007</a>
+            <a class="address-list-footer" href="tel:+380960000007"
+              >+38(096)0000007</a
+            >
           </li>
           <li>
-            <a href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a>
+            <a class="address-list-footer" href="mailto:beautyzone@gmail.com"
+              >beautyzone@gmail.com</a
+            >
           </li>
           <li>
-            <a href="https://maps.app.goo.gl/Fgm1ikt6Xe1f3ybX6" target="_blank"
+            <a
+              class="address-list-footer"
+              href="https://maps.app.goo.gl/Fgm1ikt6Xe1f3ybX6"
+              target="_blank"
               >Україна, м. Київ, вул. Тараса Шевченка 5</a
             >
           </li>
           <li>
             <a href="tel:+380960000007"
               ><img
-                src="./images/telephone-receiver_icon-icons.com_56033 1.svg"
+                src="./images/telephone-receiver_icon-icons.com_560331.webp"
                 alt="Telephone logo"
             /></a>
           </li>
           <li>
             <a href="#"
-              ><img src="./images/uit_facebook-f.svg" alt="Facebook link logo"
+              ><img src="./images/uit_facebook-f.webp" alt="Facebook link logo"
             /></a>
           </li>
           <li>
             <a href="#"
               ><img
-                src="./images/ph_instagram-logo-light.svg"
+                src="./images/ph_instagram-logo-light.webp"
                 alt="Instagram link logo"
             /></a>
           </li>
         </ul>
       </address>
-      <a href="#">Політика конфиденційності</a>
-      <p>&copy;2022 Дані захищені</p>
+      <a href="#" class="address-list-footer">Політика конфиденційності</a>
+      <p class="copyright">&copy;2022 Дані захищені</p>
     </footer>
   </body>
 </html>
