--- a/index.html
+++ b/index.html
@@ -8,195 +8,218 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="/">
-          <img src="./images/logo.webp" alt="Logo Header" />
-        </a>
-        <ul>
-          <li><a class="header-link" href="#About-us-section">Про нас</a></li>
-          <li>
-            <a class="header-link" href="#Why-choose-us-section">Чому ми</a>
-          </li>
-          <li>
-            <a class="header-link" href="#Our-procedures-section"
-              >Наші процедури</a
-            >
-          </li>
-          <li>
-            <a class="header-link" href="#Contact-us-section">Контакти</a>
-          </li>
-        </ul>
-        <address class="social-header">
+      <div class="container">
+        <nav>
+          <a href="/">
+            <img src="./images/logo.webp" alt="Logo Header" />
+          </a>
           <ul>
+            <li>
+              <a class="header-link" href="#About-us-section">Про нас</a>
+            </li>
+            <li>
+              <a class="header-link" href="#Why-choose-us-section">Чому ми</a>
+            </li>
+            <li>
+              <a class="header-link" href="#Our-procedures-section"
+                >Наші процедури</a
+              >
+            </li>
+            <li>
+              <a class="header-link" href="#Contact-us-section">Контакти</a>
+            </li>
+          </ul>
+          <address class="social-header">
+            <ul>
+              <li>
+                <a href="tel:+380960000007"
+                  ><img
+                    src="./images/telephone-receiver_icon-icons.com_560331-header.webp"
+                    alt="Telephone logo"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="./images/uit_facebook-f-header.webp"
+                    alt="Facebook link logo"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="./images/ph_instagram-logo-light-header.webp"
+                    alt="Instagram link logo"
+                /></a>
+              </li>
+            </ul>
+          </address>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section>
+        <div class="container main-section">
+          <h5 class="main-subtitle">Косметологічна клініка</h5>
+          <h1 class="main-title">beauty zone</h1>
+          <button class="main-button" type="button">Замовити дзвінок</button>
+          <p class="main-text">Запишись та отримай безкоштовну</p>
+          <p class="main-text">консультацію нашого косметолога</p>
+        </div>
+      </section>
+      <section class="about-us-section" id="About-us-section">
+        <div class="container">
+          <h2 class="about-us title">
+            Перевтілюйтесь в <span class="headings">beauty zone!</span>
+          </h2>
+          <p class="about-us-text">
+            Наша косметологічна клініка пропонує вам професійні послуги з
+            догляду за шкірою обличчя та тіла.
+          </p>
+          <p class="about-us-text">
+            B <span class="about-us-bold">beauty zone</span> ми гарантуємо
+            найвищі стандарти якості та приємний сервіс. Наші косметологічні
+            процедури та препарати допоможуть вам підтримувати свою красу та
+            молодість. З нами краса назавжди!
+          </p>
+        </div>
+      </section>
+      <section id="Why-choose-us-section">
+        <div class="container">
+          <h2 class="title">
+            Чому люди <span class="headings">обирають нас</span>
+          </h2>
+          <ul>
+            <li>
+              <article>
+                <h5 class="why-choose-us-advantages">
+                  Всі наші косметологи мають вищу медичну освіту та стаж роботи
+                  від 5 років
+                </h5>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h5 class="why-choose-us-advantages">
+                  Використовуємо тільки професійне обладнання та косметику,
+                  перевірену часом
+                </h5>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h5 class="why-choose-us-advantages">
+                  Наша мета - підкреслити переваги та приховати недоліки, а не
+                  переробити
+                </h5>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="Our-procedures-section">
+        <div class="container">
+          <h2 class="title">Наші <span class="headings">процедури</span></h2>
+          <ul>
+            <li>
+              <article>
+                <h3 class="procedures-list">Маски для обличчя</h3>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="procedures-list">Ін'єкції для обличчя</h3>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="procedures-list">Очищення обличчя</h3>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="Contact-us-section">
+        <div class="container">
+          <h3 class="contact-us title">
+            Як нас <span class="headings">знайти</span>
+          </h3>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9325734650024!2d30.51560574119678!3d50.442356571708864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2sTarasa%20Shevchenko%20Blvd%2C%205%2C%20Kyiv%2C%20Ukraine%2C%2002000!5e0!3m2!1sen!2scz!4v1700424819917!5m2!1sen!2scz"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+          <h3>
+            Запишіться
+            <span class="contact-text-subtitle-color">безкоштовно</span> та
+            отримайте подарунок
+          </h3>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="container">
+        <nav>
+          <a href="/">
+            <img src="./images/logo.webp" alt="Logo Footer" />
+          </a>
+          <ul>
+            <li class="address-list-footer">Про нас</li>
+            <li class="address-list-footer">Чому ми</li>
+            <li class="address-list-footer">Наші процедури</li>
+            <li class="address-list-footer">Контакти</li>
+          </ul>
+        </nav>
+        <address class="social-footer">
+          <ul>
+            <li>
+              <a class="address-list-footer" href="tel:+380960000007"
+                >+38(096)0000007</a
+              >
+            </li>
+            <li>
+              <a class="address-list-footer" href="mailto:beautyzone@gmail.com"
+                >beautyzone@gmail.com</a
+              >
+            </li>
+            <li>
+              <a
+                class="address-list-footer"
+                href="https://maps.app.goo.gl/Fgm1ikt6Xe1f3ybX6"
+                target="_blank"
+                >Україна, м. Київ, вул. Тараса Шевченка 5</a
+              >
+            </li>
             <li>
               <a href="tel:+380960000007"
                 ><img
-                  src="./images/telephone-receiver_icon-icons.com_560331-header.webp"
+                  src="./images/telephone-receiver_icon-icons.com_560331.webp"
                   alt="Telephone logo"
               /></a>
             </li>
             <li>
               <a href="#"
                 ><img
-                  src="./images/uit_facebook-f-header.webp"
+                  src="./images/uit_facebook-f.webp"
                   alt="Facebook link logo"
               /></a>
             </li>
             <li>
               <a href="#"
                 ><img
-                  src="./images/ph_instagram-logo-light-header.webp"
+                  src="./images/ph_instagram-logo-light.webp"
                   alt="Instagram link logo"
               /></a>
             </li>
           </ul>
         </address>
-      </nav>
-    </header>
-    <main>
-      <section class="main-section">
-        <h5 class="main-subtitle">Косметологічна клініка</h5>
-        <h1 class="main-title">beauty zone</h1>
-        <button class="main-button" type="button">Замовити дзвінок</button>
-        <p class="main-text">
-          Запишись та отримай безкоштовну консультацію нашого косметолога
-        </p>
-      </section>
-      <section id="About-us-section">
-        <h2 class="about-us title">
-          Перевтілюйтесь в <span class="headings">beauty zone!</span>
-        </h2>
-        <p class="about-us-text">
-          Наша косметологічна клініка пропонує вам професійні послуги з догляду
-          за шкірою обличчя та тіла.
-        </p>
-        <p class="about-us-text">
-          B <span class="about-us-bold">beauty zone</span> ми гарантуємо найвищі
-          стандарти якості та приємний сервіс. Наші косметологічні процедури та
-          препарати допоможуть вам підтримувати свою красу та молодість. З нами
-          краса назавжди!
-        </p>
-      </section>
-      <section id="Why-choose-us-section">
-        <h2 class="title">
-          Чому люди <span class="headings">обирають нас</span>
-        </h2>
-        <ul>
-          <li>
-            <article>
-              <h5 class="why-choose-us-advantages">
-                Всі наші косметологи мають вищу медичну освіту та стаж роботи
-                від 5 років
-              </h5>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h5 class="why-choose-us-advantages">
-                Використовуємо тільки професійне обладнання та косметику,
-                перевірену часом
-              </h5>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h5 class="why-choose-us-advantages">
-                Наша мета - підкреслити переваги та приховати недоліки, а не
-                переробити
-              </h5>
-            </article>
-          </li>
-        </ul>
-      </section>
-      <section id="Our-procedures-section">
-        <h2 class="title">Наші <span class="headings">процедури</span></h2>
-        <ul>
-          <li>
-            <article>
-              <h3 class="procedures-list">Маски для обличчя</h3>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="procedures-list">Ін'єкції для обличчя</h3>
-            </article>
-          </li>
-          <li>
-            <article><h3 class="procedures-list">Очищення обличчя</h3></article>
-          </li>
-        </ul>
-      </section>
-      <section id="Contact-us-section">
-        <h3 class="contact-us title">
-          Як нас <span class="headings">знайти</span>
-        </h3>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9325734650024!2d30.51560574119678!3d50.442356571708864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2sTarasa%20Shevchenko%20Blvd%2C%205%2C%20Kyiv%2C%20Ukraine%2C%2002000!5e0!3m2!1sen!2scz!4v1700424819917!5m2!1sen!2scz"
-          width="600"
-          height="450"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-        <h3>Запишіться <span>безкоштовно</span> та отримайте подарунок</h3>
-      </section>
-    </main>
-    <footer>
-      <nav>
-        <a href="/">
-          <img src="./images/logo.webp" alt="Logo Footer" />
-        </a>
-        <ul>
-          <li class="address-list-footer">Про нас</li>
-          <li class="address-list-footer">Чому ми</li>
-          <li class="address-list-footer">Наші процедури</li>
-          <li class="address-list-footer">Контакти</li>
-        </ul>
-      </nav>
-      <address class="social-footer">
-        <ul>
-          <li>
-            <a class="address-list-footer" href="tel:+380960000007"
-              >+38(096)0000007</a
-            >
-          </li>
-          <li>
-            <a class="address-list-footer" href="mailto:beautyzone@gmail.com"
-              >beautyzone@gmail.com</a
-            >
-          </li>
-          <li>
-            <a
-              class="address-list-footer"
-              href="https://maps.app.goo.gl/Fgm1ikt6Xe1f3ybX6"
-              target="_blank"
-              >Україна, м. Київ, вул. Тараса Шевченка 5</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380960000007"
-              ><img
-                src="./images/telephone-receiver_icon-icons.com_560331.webp"
-                alt="Telephone logo"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./images/uit_facebook-f.webp" alt="Facebook link logo"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/ph_instagram-logo-light.webp"
-                alt="Instagram link logo"
-            /></a>
-          </li>
-        </ul>
-      </address>
-      <a href="#" class="address-list-footer">Політика конфиденційності</a>
-      <p class="copyright">&copy;2022 Дані захищені</p>
+        <a href="#" class="address-list-footer">Політика конфиденційності</a>
+        <p class="copyright">&copy;2022 Дані захищені</p>
+      </div>
     </footer>
   </body>
 </html>
